--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,10 +46,18 @@
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
 
         <service
-            android:name=".MyBackgroundService"
+            android:name=".services.MyBackgroundService"
             android:enabled="true"
             android:exported="true"
             android:foregroundServiceType="location"></service>
+        <service
+            android:name=".services.FirebaseMessagingService"
+            android:stopWithTask="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
