--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,11 @@ dependencies {
     // FirebaseUI for Firebase Realtime Database
     implementation 'com.firebaseui:firebase-ui-database:6.2.1'
 
+    implementation 'com.facebook.android:facebook-login:[5,6)'
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
 
 }
